Fixed hamburger button overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 
 .app-header {
   display: grid;
-  grid-template-columns: 1fr 40px;
+  grid-template-columns: 1fr 40px 40px;
   padding: 10px;
   position: sticky; top: 0;
   background-color: #fff;
